--- a/phasseeeee/Parents.html
+++ b/phasseeeee/Parents.html
@@ -107,7 +107,7 @@ h3,h1{
       <nav class="nav-list">
         <strong>
 
-          <a href="Index.html" accesskey="1">Home</a>
+          <a href="index.html" accesskey="1">Home</a>
           <a href="Courses.html"accesskey="2">Courses</a>
           <a href="Tutors1.html"accesskey="3">Tutors</a>
           <a href="Admenistrator1.html"accesskey="4">Administrator</a>
@@ -119,7 +119,7 @@ h3,h1{
       </header>
    <main> 
        <ul class="breadcrumb">
-         <li><a href="Index.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
 
          <li><a href="Parents.html">Parent</a></li>
        </ul>
