--- a/phasseeeee/Tutors1.html
+++ b/phasseeeee/Tutors1.html
@@ -17,7 +17,7 @@
       <nav class="nav-list">
         <strong>
 
-          <a href="Index.html" accesskey="1">Home</a>
+          <a href="index.html" accesskey="1">Home</a>
           <a href="Courses.html"accesskey="2">Courses</a>
           <a href="Tutors1.html"accesskey="3">Tutors</a>
           <a href="Admenistrator1.html"accesskey="4">Administrator</a>
@@ -26,7 +26,7 @@
       </nav>
    </header>
    <ul class="breadcrumb">
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Tutors1.html">Tutors</a></li>
         </ul>
 <main>
