--- a/phasseeeee/table1.html
+++ b/phasseeeee/table1.html
@@ -5,14 +5,17 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href= "TutorsStyle1.css">
     <link rel="stylesheet" href= "header&footerstyle.css">
+	  	    <link rel="stylesheet" href="colors.css">
+    <script src="themesc.js" ></script>
  </head>
  <body>
+  <a id="Button" alt="Theme Toggle Button"></a>
 <header>
   <div class="logo">
      <img src="img/Tippy_Coder.png" alt="Tippy_Coder logo" width="100" height="100" ></div>
     <nav class="nav-list">
   <strong>
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
 
         <a href="Courses.html">Courses</a>
     <a href="Tutors1.html">Tutors</a>
@@ -22,7 +25,7 @@
   </nav>
    </header>
       <ul class="breadcrumb">
-         <li><a href="Index.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
          <li><a href="Tutors1.html">Tutors</a></li>
          <li><a href="table1.html">Tutors</a></li>
        </ul>
