--- a/phasseeeee/Courses.html
+++ b/phasseeeee/Courses.html
@@ -18,7 +18,7 @@
       <nav class="nav-list">
         <strong>
 
-          <a href="Index.html" accesskey="1">Home</a>
+          <a href="index.html" accesskey="1">Home</a>
           <a href="Courses.html"accesskey="2">Courses</a>
           <a href="Tutors1.html"accesskey="3">Tutors</a>
           <a href="Admenistrator1.html"accesskey="4">Administrator</a>
@@ -27,7 +27,7 @@
       </nav>
     </header>
 <ul class="breadcrumb">
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Courses.html">Courses</a></li>
         </ul>
 <main class="Courses">
