--- a/phasseeeee/Index.html
+++ b/phasseeeee/Index.html
@@ -19,7 +19,7 @@
       <nav class="nav-list">
         <strong>
 
-          <a href="Index.html" accesskey="1">Home</a>
+          <a href="index.html" accesskey="1">Home</a>
           <a href="Courses.html"accesskey="2">Courses</a>
           <a href="Tutors1.html"accesskey="3">Tutors</a>
           <a href="Admenistrator1.html"accesskey="4">Administrator</a>
