--- a/phasseeeee/Register.html
+++ b/phasseeeee/Register.html
@@ -117,7 +117,7 @@ input[type="submit"]:hover {
       <nav class="nav-list">
         <strong>
 
-          <a href="Index.html" accesskey="1">Home</a>
+          <a href="index.html" accesskey="1">Home</a>
           <a href="Courses.html"accesskey="2">Courses</a>
           <a href="Tutors1.html"accesskey="3">Tutors</a>
           <a href="Admenistrator1.html"accesskey="4">Administrator</a>
@@ -128,7 +128,7 @@ input[type="submit"]:hover {
       </header><br>
      
     <ul class="breadcrumb">
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Parents.html">Parents</a></li>
         <li><a href="Register.html">Register</a></li>
       </ul> 
